// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VideoBlock /> it renders VideoBlock with autoplay 1`] = `
<div
  className="mfui-video-block"
>
  <Grid
    className="mfui-video-block__grid"
    hAlign="center"
  >
    <GridColumn
      all="10"
      className="mfui-video-block__video-column"
      key="column-video"
      mobile="12"
      tablet="12"
    >
      <video
        autoPlay={true}
        className="mfui-video-block__video"
        controls={false}
        loop={true}
        muted={true}
      >
        <source
          src="video"
          type="video/mp4"
        />
      </video>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<VideoBlock /> it renders VideoBlock with classes 1`] = `
<div
  className="mfui-video-block className rootClass"
>
  <Grid
    className="mfui-video-block__grid"
    hAlign="center"
  >
    <GridColumn
      all="5"
      className="mfui-video-block__content-column"
      key="column-content"
      mobile="12"
      orderMobile="2"
      orderTablet="2"
      tablet="12"
    >
      <div
        className="mfui-video-block__content"
      >
        <Header
          as="h2"
          className="mfui-video-block__header"
        >
          Test title
        </Header>
        <div
          className="mfui-video-block__description descriptionClass"
        >
          Test description
        </div>
        <Button
          className="mfui-video-block__button buttonClass"
          dataAttrs={
            Object {
              "root": undefined,
            }
          }
          href="#"
        >
          Button title
        </Button>
      </div>
    </GridColumn>
    <GridColumn
      all="7"
      className="mfui-video-block__video-column"
      key="column-video"
      mobile="12"
      tablet="12"
    >
      <video
        autoPlay={false}
        className="mfui-video-block__video"
        controls={true}
        loop={true}
        muted={true}
      >
        <source
          src="video.mp4"
          type="video/mp4"
        />
      </video>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<VideoBlock /> it renders VideoBlock with content 1`] = `
<div
  className="mfui-video-block"
>
  <Grid
    className="mfui-video-block__grid"
    hAlign="center"
  >
    <GridColumn
      all="5"
      className="mfui-video-block__content-column"
      key="column-content"
      mobile="12"
      orderMobile="2"
      orderTablet="2"
      tablet="12"
    >
      <div
        className="mfui-video-block__content"
      >
        <Header
          as="h2"
          className="mfui-video-block__header"
        >
          Test title
        </Header>
        <div
          className="mfui-video-block__description"
        >
          Test description
        </div>
        <Button
          className="mfui-video-block__button"
          dataAttrs={
            Object {
              "root": undefined,
            }
          }
          href="#"
        >
          Button title
        </Button>
      </div>
    </GridColumn>
    <GridColumn
      all="7"
      className="mfui-video-block__video-column"
      key="column-video"
      mobile="12"
      tablet="12"
    >
      <video
        autoPlay={false}
        className="mfui-video-block__video"
        controls={true}
        loop={true}
        muted={true}
      >
        <source
          src="video.mp4"
          type="video/mp4"
        />
      </video>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<VideoBlock /> it renders VideoBlock with content and button download link 1`] = `
<div
  className="mfui-video-block"
>
  <Grid
    className="mfui-video-block__grid"
    hAlign="center"
  >
    <GridColumn
      all="5"
      className="mfui-video-block__content-column"
      key="column-content"
      mobile="12"
      orderMobile="2"
      orderTablet="2"
      tablet="12"
    >
      <div
        className="mfui-video-block__content"
      >
        <Header
          as="h2"
          className="mfui-video-block__header"
        >
          Test title
        </Header>
        <div
          className="mfui-video-block__description"
        >
          Test description
        </div>
        <Button
          className="mfui-video-block__button"
          dataAttrs={
            Object {
              "root": undefined,
            }
          }
          download={true}
          href="#"
        >
          Button title
        </Button>
      </div>
    </GridColumn>
    <GridColumn
      all="7"
      className="mfui-video-block__video-column"
      key="column-video"
      mobile="12"
      tablet="12"
    >
      <video
        autoPlay={false}
        className="mfui-video-block__video"
        controls={true}
        loop={true}
        muted={true}
      >
        <source
          src="video.mp4"
          type="video/mp4"
        />
      </video>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<VideoBlock /> it renders VideoBlock with content but without button 1`] = `
<div
  className="mfui-video-block"
>
  <Grid
    className="mfui-video-block__grid"
    hAlign="center"
  >
    <GridColumn
      all="5"
      className="mfui-video-block__content-column"
      key="column-content"
      mobile="12"
      orderMobile="2"
      orderTablet="2"
      tablet="12"
    >
      <div
        className="mfui-video-block__content"
      >
        <Header
          as="h2"
          className="mfui-video-block__header"
        >
          Test title
        </Header>
        <div
          className="mfui-video-block__description"
        >
          Test description
        </div>
      </div>
    </GridColumn>
    <GridColumn
      all="7"
      className="mfui-video-block__video-column"
      key="column-video"
      mobile="12"
      tablet="12"
    >
      <video
        autoPlay={false}
        className="mfui-video-block__video"
        controls={true}
        loop={true}
        muted={true}
      >
        <source
          src="video.mp4"
          type="video/mp4"
        />
      </video>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<VideoBlock /> it renders VideoBlock with contentPositionRight 1`] = `
<div
  className="mfui-video-block"
>
  <Grid
    className="mfui-video-block__grid"
    hAlign="center"
  >
    <GridColumn
      all="5"
      className="mfui-video-block__content-column mfui-video-block__content-column_position-right"
      key="column-content"
      mobile="12"
      orderMobile="2"
      orderTablet="2"
      tablet="12"
    >
      <div
        className="mfui-video-block__content mfui-video-block__content_position-right"
      >
        <Header
          as="h2"
          className="mfui-video-block__header"
        >
          Test title
        </Header>
        <div
          className="mfui-video-block__description"
        >
          Test description
        </div>
        <Button
          className="mfui-video-block__button"
          dataAttrs={
            Object {
              "root": undefined,
            }
          }
          href="#"
        >
          Button title
        </Button>
      </div>
    </GridColumn>
    <GridColumn
      all="7"
      className="mfui-video-block__video-column mfui-video-block__video-column_position-left"
      key="column-video"
      mobile="12"
      tablet="12"
    >
      <video
        autoPlay={false}
        className="mfui-video-block__video"
        controls={true}
        loop={true}
        muted={true}
      >
        <source
          src="video.mp4"
          type="video/mp4"
        />
      </video>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<VideoBlock /> it renders VideoBlock with dataAttrs 1`] = `
<div
  className="mfui-video-block"
  data-testid="root-test"
>
  <Grid
    className="mfui-video-block__grid"
    hAlign="center"
  >
    <GridColumn
      all="5"
      className="mfui-video-block__content-column"
      key="column-content"
      mobile="12"
      orderMobile="2"
      orderTablet="2"
      tablet="12"
    >
      <div
        className="mfui-video-block__content"
      >
        <Header
          as="h2"
          className="mfui-video-block__header"
        >
          Test title
        </Header>
        <div
          className="mfui-video-block__description"
        >
          Test description
        </div>
        <Button
          className="mfui-video-block__button"
          dataAttrs={
            Object {
              "root": Object {
                "data-testid": "button-test",
              },
            }
          }
          href="#"
        >
          Button title
        </Button>
      </div>
    </GridColumn>
    <GridColumn
      all="7"
      className="mfui-video-block__video-column"
      key="column-video"
      mobile="12"
      tablet="12"
    >
      <video
        autoPlay={false}
        className="mfui-video-block__video"
        controls={true}
        loop={true}
        muted={true}
      >
        <source
          src="video.mp4"
          type="video/mp4"
        />
      </video>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<VideoBlock /> it renders VideoBlock with default props 1`] = `
<div
  className="mfui-video-block"
>
  <Grid
    className="mfui-video-block__grid"
    hAlign="center"
  >
    <GridColumn
      all="10"
      className="mfui-video-block__video-column"
      key="column-video"
      mobile="12"
      tablet="12"
    >
      <video
        autoPlay={false}
        className="mfui-video-block__video"
        controls={true}
        loop={true}
        muted={true}
      >
        <source
          src="video.mp4"
          type="video/mp4"
        />
      </video>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<VideoBlock /> it renders VideoBlock with poster 1`] = `
<div
  className="mfui-video-block"
>
  <Grid
    className="mfui-video-block__grid"
    hAlign="center"
  >
    <GridColumn
      all="10"
      className="mfui-video-block__video-column"
      key="column-video"
      mobile="12"
      tablet="12"
    >
      <video
        autoPlay={false}
        className="mfui-video-block__video"
        controls={true}
        loop={true}
        muted={true}
        poster="site.com/poster.png"
      >
        <source
          src="video"
          type="video/mp4"
        />
      </video>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<VideoBlock /> it renders VideoBlock with sound turned on 1`] = `
<div
  className="mfui-video-block"
>
  <Grid
    className="mfui-video-block__grid"
    hAlign="center"
  >
    <GridColumn
      all="10"
      className="mfui-video-block__video-column"
      key="column-video"
      mobile="12"
      tablet="12"
    >
      <video
        autoPlay={false}
        className="mfui-video-block__video"
        controls={true}
        loop={true}
        muted={false}
      >
        <source
          src="video"
          type="video/mp4"
        />
      </video>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<VideoBlock /> it renders VideoBlock with youtube media type 1`] = `
<div
  className="mfui-video-block"
>
  <Grid
    className="mfui-video-block__grid"
    hAlign="center"
  >
    <GridColumn
      all="10"
      className="mfui-video-block__video-column"
      key="column-video"
      mobile="12"
      tablet="12"
    >
      <div
        className="mfui-video-block__youtube"
      >
        <iframe
          allow="autoplay"
          allowFullScreen={true}
          className="mfui-video-block__iframe"
          frameBorder="0"
          height="100%"
          src="https://www.youtube.com/embed/youtube?&autoplay=0&mute=1&loop=1&rel=0&controls=1&showinfo=0&iv_load_policy=3&playlist=youtube"
          title="iframe"
          width="100%"
        />
      </div>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<VideoBlock /> it renders VideoBlock with youtube media type and autoplay 1`] = `
<div
  className="mfui-video-block"
>
  <Grid
    className="mfui-video-block__grid"
    hAlign="center"
  >
    <GridColumn
      all="10"
      className="mfui-video-block__video-column"
      key="column-video"
      mobile="12"
      tablet="12"
    >
      <div
        className="mfui-video-block__youtube"
      >
        <iframe
          allow="autoplay"
          allowFullScreen={true}
          className="mfui-video-block__iframe"
          frameBorder="0"
          height="100%"
          src="https://www.youtube.com/embed/youtube?&autoplay=1&mute=1&loop=1&rel=0&controls=0&showinfo=0&iv_load_policy=3&playlist=youtube"
          title="iframe"
          width="100%"
        />
      </div>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<VideoBlock /> it renders VideoBlock with youtube media type and sound turned on 1`] = `
<div
  className="mfui-video-block"
>
  <Grid
    className="mfui-video-block__grid"
    hAlign="center"
  >
    <GridColumn
      all="10"
      className="mfui-video-block__video-column"
      key="column-video"
      mobile="12"
      tablet="12"
    >
      <div
        className="mfui-video-block__youtube"
      >
        <iframe
          allow="autoplay"
          allowFullScreen={true}
          className="mfui-video-block__iframe"
          frameBorder="0"
          height="100%"
          src="https://www.youtube.com/embed/youtube?&autoplay=0&mute=0&loop=1&rel=0&controls=1&showinfo=0&iv_load_policy=3&playlist=youtube"
          title="iframe"
          width="100%"
        />
      </div>
    </GridColumn>
  </Grid>
</div>
`;

exports[`<VideoBlock /> render component with html tags 1`] = `
<div
  className="mfui-video-block"
>
  <Grid
    className="mfui-video-block__grid"
    hAlign="center"
  >
    <GridColumn
      all="5"
      className="mfui-video-block__content-column"
      key="column-content"
      mobile="12"
      orderMobile="2"
      orderTablet="2"
      tablet="12"
    >
      <div
        className="mfui-video-block__content"
      >
        <Header
          as="h2"
          className="mfui-video-block__header"
        >
          <component
            href="https://moscow.megafon.ru"
            key="0"
          >
            Текст
          </component>
          <component
            key="1"
          />
          <component
            color="#731982"
            key="2"
          >
            ≈40
          </component>
           символов. Короткие слова
        </Header>
        <div
          className="mfui-video-block__description"
        >
          Описание должно 
          <component
            href="https://moscow.megafon.ru"
            key="1"
          >
            быть
          </component>
           
          <component
            color="#731982"
            key="3"
          >
            примерно
          </component>
           не более 130 символов.
          <component
            key="5"
          />
          Пишите 
          <component
            key="7"
          >
            содержательно
          </component>
          , кратно и не будет проблем с текстовым контентом.
        </div>
        <Button
          className="mfui-video-block__button"
          dataAttrs={
            Object {
              "root": undefined,
            }
          }
          href="#"
        >
          Button title
        </Button>
      </div>
    </GridColumn>
    <GridColumn
      all="7"
      className="mfui-video-block__video-column"
      key="column-video"
      mobile="12"
      tablet="12"
    >
      <video
        autoPlay={false}
        className="mfui-video-block__video"
        controls={true}
        loop={true}
        muted={true}
      >
        <source
          src="video"
          type="video/mp4"
        />
      </video>
    </GridColumn>
  </Grid>
</div>
`;
